tests/SemanticError/Fonctions/Test3/CallWrongFunction.c
int fonction(int a){
	return 2*a;
}

int main(){
	int a;
	a=faction(2);
	return a;
}

